--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("styles/header.css");
+@import url("styles/banner.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -14,3 +15,5 @@ body{
     font-size: 16px;
     font-weight: 400;
 }
+
+
