--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -19,5 +19,56 @@
 
 .swiper-pagination{
     position: initial;
-    margin: 0.5em 0
+    margin: 0.5em 0;
+}
+
+.card__descrição    {
+    display:flex;
+    justify-content:space-between;
+    margin-bottom: 0.5em;
+}
+
+.card__botões{
+    display:flex;
+    justify-content:space-between;
+}
+
+.botões{
+    display:flex;
+}
+
+.card{
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius:10px;
+    margin: 1em;
+    padding: 1em;
+}
+
+.descrição__titulo{
+    font-weight: 700;
+    color: var(--laranja);    
+}
+
+.descrição__titulo-livro{
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--azul);
+    margin:0.5em 0;
+}
+
+.descrição__texto{
+    font-size: 14px;
+}
+
+.botões__item{
+    margin: 0 0.5em;
+}
+
+.botões__ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    font-weight: 700;
+    color: var(--branco);
+    text-decoration:none;
 }
