--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -38,7 +38,7 @@
 }
 
 .card{
-    background: rgba(255, 255, 255, 1);
+    background: var(--branco);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius:10px;
     margin: 1em;
