--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 @import url("styles/carrossel.css");
 @import url("styles/topicos.css");
 @import url("styles/contatos.css");
-
+@import url("styles/rodape.css");
 
 
 :root {
