--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,74 +1,98 @@
-.carrossel__titulo{
-    color: var(--laranja);
-    background-color: var(--branco);
-    text-align:center;
-    text-transform:uppercase;
-    font-size:18px;
-    font-weight:700;
-    padding:1em 0 0.5em 0;
+.carrossel__titulo {
+  color: var(--laranja);
+  background-color: var(--branco);
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 1em 0 0.5em 0;
 }
 
-.swiper-slide img{
-    width:100%;
+.swiper-slide img {
+  width: 100%;
 }
 
-.swiper-button-prev, 
-.swiper-button-next{
-    display: none;
+.swiper-button-prev,
+.swiper-button-next {
+  display: none;
 }
 
-.swiper-pagination{
-    position: initial;
-    margin: 0.5em 0;
+.swiper-pagination {
+  position: initial;
+  margin: 0.5em 0;
 }
 
-.card__descrição    {
-    display:flex;
-    justify-content:space-between;
-    margin-bottom: 0.5em;
+.card__descrição {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5em;
 }
 
-.card__botões{
-    display:flex;
-    justify-content:space-between;
+.card__botões {
+  display: flex;
+  justify-content: space-between;
 }
 
-.botões{
-    display:flex;
+.botões {
+  display: flex;
 }
 
-.card{
-    background: var(--branco);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    border-radius:10px;
-    margin: 1em;
-    padding: 1em;
+.card {
+  background: var(--branco);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin: 1em;
+  padding: 1em;
 }
 
-.descrição__titulo{
-    font-weight: 700;
-    color: var(--laranja);    
+.descrição__titulo {
+  font-weight: 700;
+  color: var(--laranja);
 }
 
-.descrição__titulo-livro{
-    font-size: 18px;
-    font-weight: 700;
-    color: var(--azul);
-    margin:0.5em 0;
+.descrição__titulo-livro {
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--azul);
+  margin: 0.5em 0;
 }
 
-.descrição__texto{
-    font-size: 14px;
+.descrição__texto {
+  font-size: 14px;
 }
 
-.botões__item{
-    margin: 0 0.5em;
+.botões__item {
+  margin: 0 0.5em;
 }
 
-.botões__ancora{
-    background-color: var(--laranja);
-    padding: 1em 2.2em;
-    font-weight: 700;
-    color: var(--branco);
-    text-decoration:none;
+.botões__ancora {
+  background-color: var(--laranja);
+  padding: 1em 2.2em;
+  font-weight: 700;
+  color: var(--branco);
+  text-decoration: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .carrossel__titulo {
+    font-size: 26px;
+  }
+
+  .swiper-pagination {
+    margin: 2em 0 3em 0;
+  }
+
+  .swiper {
+    width: 60%;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: block;
+    top: 60%;
+  }
+
+  .card{
+    width: 40%;
+    margin: 2em auto;
+  }
 }
