--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@
     background-color: var(--branco);
     display: flex;
     justify-content:space-between;
-    aling-items:center;
+    align-items:center;
     position:relative;
 }
 
@@ -49,4 +49,60 @@
 }
 .container__botao{
     display:none;
+}
+
+.container__titulo{
+    display:none;
+}
+
+.opcoes {
+    display: none;
+}
+
+
+@media screen and (min-width: 1024px){
+    
+    .container__titulo,
+    .container__titulo--negrito{
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+    }
+    .container__titulo{
+        font-weight: 400;
+        display:block;
+    }
+    .container__titulo--negrito{
+        font-weight: 700;
+    }
+
+    .opcoes{
+        display:flex;
+    }
+
+    .opcoes__item{
+        padding: 0 1em;
+        text-transform:uppercase;
+    }
+
+    .opcoes__link{
+        text-decoration:none;
+        color: var(--preto);
+    }
+    
+    .container__imagem-transparente{
+        display:none;
+    }
+
+    .cabeçalho__menu-hamburguer{
+        display:none;
+    }
+    .opcoes_botao:checked ~ .lista-menu{
+        display:block;
+        width:auto;
+    }
+
+    .opcoes_botao{
+        display:none;
+    }
+
 }
