--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -91,8 +91,41 @@
     top: 60%;
   }
 
-  .card{
+  .card {
     width: 40%;
     margin: 2em auto;
+  }
+}
+
+@media screen and (min-width: 1728px) {
+  .carrossel__container {
+    display: flex;
+    align-items: center;
+    margin: 0 20vw 3em 20vw;
+  }
+
+  .swiper-pagination {
+    margin: 1em 0;
+  }
+
+  .swiper {
+    width: 50%;
+  }
+
+  .descrição__titulo {
+    font-size: 32px;
+  }
+
+  .descrição__texto {
+    font-size: 16px;
+  }
+
+  .descrição {
+    margin-right: 2em;
+  }
+
+  .card {
+    width: 60%;
+    margin-left: 3em;
   }
 }
