--- a/styles/header.css
+++ b/styles/header.css
@@ -105,4 +105,34 @@
         display:none;
     }
 
+    .container__texto{
+        display:none;
+    }
+
+}
+
+@media screen and (min-width: 1728px){
+
+    .container__link{
+    display:flex;    
+    align-items:center;
+    text-decoration:none;
+    color: var(--preto)
+    }
+
+    .container__texto{
+        font-size: 20px;
+    }
+
+    .cabeçalho{
+        padding: 0 2em;
+    }
+    
+    .opcoes{
+        margin-right:auto;
+    }
+
+    .container__texto{
+        display:block;
+    }
 }
